# storage/api-docs/api-docs.json
@@ -11,96 +11,28 @@
         }
     ],
     "paths": {
-        "/register": {
+        "/admin/login": {
             "post": {
                 "tags": [
-                    "Auth"
+                    "AdminAuth"
                 ],
-                "summary": "Register a new user",
-                "operationId": "0903f2e0df1a8857bee538fc055417f0",
+                "summary": "Admin login",
+                "operationId": "6e9fa1e6623769561167fc73fb39451e",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "first_name",
-                                    "last_name",
-                                    "phone_number",
-                                    "password",
-                                    "password_confirmation",
-                                    "device_id"
+                                    "email",
+                                    "password"
                                 ],
                                 "properties": {
-                                    "first_name": {
-                                        "type": "string"
-                                    },
-                                    "last_name": {
-                                        "type": "string"
-                                    },
                                     "email": {
                                         "type": "string",
                                         "format": "email"
                                     },
-                                    "phone_number": {
-                                        "type": "string"
-                                    },
                                     "password": {
-                                        "type": "string"
-                                    },
-                                    "password_confirmation": {
-                                        "type": "string"
-                                    },
-                                    "device_id": {
-                                        "type": "string"
-                                    },
-                                    "device_name": {
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "User registered successfully"
-                    },
-                    "422": {
-                        "description": "Validation error"
-                    }
-                }
-            }
-        },
-        "/login": {
-            "post": {
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Login user",
-                "operationId": "2dd578ff7aba2721293dac66833b27d1",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "phone_number",
-                                    "password",
-                                    "device_id"
-                                ],
-                                "properties": {
-                                    "phone_number": {
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "type": "string"
-                                    },
-                                    "device_id": {
-                                        "type": "string"
-                                    },
-                                    "device_name": {
                                         "type": "string"
                                     }
                                 },
@@ -114,39 +46,91 @@
                         "description": "Login successful"
                     },
                     "401": {
-                        "description": "Invalid login attempt"
+                        "description": "Invalid credentials"
                     }
                 }
             }
         },
-        "/logout": {
-            "post": {
+        "/admin/profile": {
+            "get": {
                 "tags": [
-                    "Auth"
+                    "AdminAuth"
                 ],
-                "summary": "Logout user",
-                "operationId": "68a6108af04af5e3bc1ea68a6c6f1299",
+                "summary": "Get admin profile",
+                "operationId": "be76cdbb973229d91dac2c9903626323",
                 "responses": {
                     "200": {
-                        "description": "Logged out successfully"
+                        "description": "Admin profile returned"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
-            }
-        },
-        "/forgot-password": {
-            "post": {
+            },
+            "put": {
                 "tags": [
-                    "Auth"
+                    "AdminAuth"
                 ],
-                "summary": "Forgot Password",
-                "operationId": "da27e3923ff357f8610f31cf2cb83224",
+                "summary": "Update admin profile (Super Admin only)",
+                "operationId": "bd90a50ca8b594f804fd7fdc4e7df96e",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
+                                "required": [
+                                    "name",
+                                    "email"
+                                ],
                                 "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
                                     "email": {
+                                        "type": "string",
+                                        "format": "email"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Profile updated"
+                    },
+                    "403": {
+                        "description": "Only super admins can edit their profile."
+                    }
+                }
+            }
+        },
+        "/admin/change-password": {
+            "post": {
+                "tags": [
+                    "AdminAuth"
+                ],
+                "summary": "Change admin password",
+                "operationId": "1b1cc7e810c1adb5040ae3a2afefa2fd",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "current_password",
+                                    "new_password",
+                                    "new_password_confirmation"
+                                ],
+                                "properties": {
+                                    "current_password": {
+                                        "type": "string"
+                                    },
+                                    "new_password": {
+                                        "type": "string"
+                                    },
+                                    "new_password_confirmation": {
                                         "type": "string"
                                     }
                                 },
@@ -157,7 +141,24 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Reset code sent"
+                        "description": "Password updated successfully"
+                    },
+                    "400": {
+                        "description": "Current password is incorrect"
+                    }
+                }
+            }
+        },
+        "/admin/logout": {
+            "post": {
+                "tags": [
+                    "AdminAuth"
+                ],
+                "summary": "Admin logout",
+                "operationId": "be5acf48746a8be5203223ec84a10b89",
+                "responses": {
+                    "200": {
+                        "description": "Logged out successfully"
                     }
                 }
             }
@@ -176,8 +177,8 @@
     },
     "tags": [
         {
-            "name": "Auth",
-            "description": "Authentication related endpoints"
+            "name": "AdminAuth",
+            "description": "Admin Authentication and Profile management"
         }
     ]
 }
